# guardix

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  config.yaml.example  docker-compose.yml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.sqlx/: README.md  query-286193752c53d6b2d2d057f04332dd269454c868a99132c6d760f1614d01921b.json  query-2c0f3975c6ef9e85d3bc2aeff9310a3b60c40153099eb556e7309bede0515fa5.json  query-509f239734b6947874fc5588d36d1c742c5d757ff55326b5a813cb6238f87fcf.json  query-595173811fe14073275a45c7f725e09f004314031e0470df26402d96856a9c75.json  query-958331768a79777f200851c3009782ef50f3246c8fee5253e605213c48873b8f.json
data/: rulebook.json
docs/: ARCHITECTURE.md
examples/: test_backend.rs
migrations/: 001_initial.sql
src/: config.rs  lib.rs  main.rs
src/core/: judge.rs  learner.rs  mod.rs  rulebook.rs
src/http/: middleware.rs  mod.rs  proxy.rs
src/llm/: client.rs  mod.rs  ollama.rs  prompts.rs
src/models/: decision.rs  mod.rs  request.rs
src/storage/: cache.rs  logs.rs  mod.rs  rules.rs
tests/: README.md  e2e_tests.rs
